bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/exclude_missspell.stderr
error: Unexpected tokens, expected one of `::$ident` `::{`, `exclude_parts`, `use_parts`, `=`, `,`
  --> tests/construct_runtime_ui/exclude_missspell.rs:26:27
   |
26 |         System: pezframe_system exclude_part { Call },
   |                                 ^^^^^^^^^^^^
